# CalculatriceSimple

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
Source/: addition.py  calculator_UI.py  code_source_calculatrice.py  division.py  fireworks.py  main.py  multiplication.py  soustraction.py  test_files.py
tests/: test_files.py
